src/test/ui/issue-23716.stderr
error[E0530]: function parameters cannot shadow statics
  --> $DIR/issue-23716.rs:14:8
   |
11 | static foo: i32 = 0;
   | -------------------- a static `foo` is defined here
...
14 | fn bar(foo: i32) {}
   |        ^^^ cannot be named the same as a static

error[E0530]: function parameters cannot shadow statics
  --> $DIR/issue-23716.rs:25:13
   |
22 | use self::submod::answer;
   |     -------------------- a static `answer` is imported here
...
25 | fn question(answer: i32) {}
   |             ^^^^^^ cannot be named the same as a static

error: aborting due to 2 previous errors

